Fix duplicated operationIds
